Update Login/Register/Refresh/Profile
